--- a/src/scss/IslandPageBlock.scss
+++ b/src/scss/IslandPageBlock.scss
@@ -50,6 +50,5 @@
 	.IslandPageBlock__button {
 		@include ButtonTertiaryStyle($mode: simple);
 		display: block;
-		margin-bottom: 0;
 	}
 }
